--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
                     </div>
 
                     <img
-                      style="object-fit: contains;"
+                      style="object-fit: contain;"
                       src="./assets/images/project-1.jpg"
                       alt="finance"
                       loading="lazy"
@@ -813,7 +813,7 @@
                     </div>
 
                     <img
-                      style="object-fit: contains;"
+                      style="object-fit: contain;"
                       src="./assets/images/project-2.png"
                       alt="orizon"
                       loading="lazy"
@@ -861,7 +861,7 @@
                     </div>
 
                     <img
-                      style="object-fit: contains;"
+                      style="object-fit: contain;"
                       src="./assets/images/project-4.png"
                       alt="brawlhalla"
                       loading="lazy"
@@ -889,7 +889,7 @@
                     </div>
 
                     <img
-                      style="object-fit: contains;"
+                      style="object-fit: contain;"
                       src="./assets/images/project-5.png"
                       alt="dsm."
                       loading="lazy"
@@ -918,7 +918,7 @@
                     </div>
 
                     <img
-                      style="object-fit: contains;"
+                      style="object-fit: contain;"
                       src="./assets/images/project-6.png"
                       alt="metaspark"
                       loading="lazy"
@@ -946,7 +946,7 @@
                     </div>
 
                     <img
-                      style="object-fit: contains;"
+                      style="object-fit: contain;"
                       src="./assets/images/project-7.png"
                       alt="summary"
                       loading="lazy"
