Updation in the portfolio section for the project's overview

--- a/index.html
+++ b/index.html
@@ -730,9 +730,9 @@
               <button data-filter-btn>Web design</button>
             </li> -->
 
-              <li class="filter-item">
+              <!-- <li class="filter-item">
                 <button data-filter-btn>Applications</button>
-              </li>
+              </li> -->
 
               <li class="filter-item">
                 <button data-filter-btn>Web development</button>
@@ -775,17 +775,23 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a class="project-container" href="#">
                   <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
+                    <div
+                      onclick=""
+                      class="project-item-icon-box"
+                    >
+                      <ion-icon name="eye-off"></ion-icon>
                     </div>
-                    <div class="project-item-icon-box2 project-item-icon-box">
+                    <div
+                      onclick="window.location.href='https://github.com/atulj10/ECommerce';"
+                      class="project-item-icon-box2 project-item-icon-box"
+                    >
                       <ion-icon name="logo-github"></ion-icon>
                     </div>
 
                     <img
-                      style="object-fit: contain;"
+                      style="object-fit: contain"
                       src="./assets/images/project-1.jpg"
                       alt="finance"
                       loading="lazy"
@@ -803,17 +809,23 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a class="project-container" href="#">
                   <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <div class="project-item-icon-box2 project-item-icon-box">
+                    <!-- <div
+                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
+                      class="project-item-icon-box"
+                    >
+                      <p>I'm not allowed to share any info on this</p>
+                    </div> -->
+                    <!-- <div
+                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
+                      class="project-item-icon-box2 project-item-icon-box"
+                    >
                       <ion-icon name="logo-github"></ion-icon>
-                    </div>
+                    </div> -->
 
                     <img
-                      style="object-fit: contain;"
+                      style="object-fit: contain"
                       src="./assets/images/project-2.png"
                       alt="orizon"
                       loading="lazy"
@@ -827,10 +839,10 @@
               </li>
 
               <!-- <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a class="project-container" href="#">
 
                 <figure class="project-img">
-                  <div class="project-item-icon-box">
+                  <div onclick="window.location.href='https://advance-task-manager.vercel.app/';" class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
@@ -849,19 +861,23 @@
                 data-filter-item
                 data-category="web development"
               >
-                <!-- <a href="#"> -->
+                <a class="project-container" href="#">
                   <figure class="project-img">
-                    <div class="project-item-icon-box">
-                      <a href="https://figma-clone-nu-ten.vercel.app/"
-                        ><ion-icon color="" name="eye-outline"></ion-icon
-                      ></a>
+                    <div
+                      onclick="window.location.href='https://figma-clone-nu-ten.vercel.app/';"
+                      class="project-item-icon-box"
+                    >
+                      <ion-icon color="" name="eye-outline"></ion-icon>
                     </div>
-                    <div class="project-item-icon-box2 project-item-icon-box">
+                    <div
+                      onclick="window.location.href='https://github.com/atulj10/figma_clone';"
+                      class="project-item-icon-box2 project-item-icon-box"
+                    >
                       <ion-icon name="logo-github"></ion-icon>
                     </div>
 
                     <img
-                      style="object-fit: contain;"
+                      style="object-fit: contain"
                       src="./assets/images/project-4.png"
                       alt="brawlhalla"
                       loading="lazy"
@@ -871,7 +887,7 @@
                   <h3 class="project-title">Figma clone</h3>
 
                   <p class="project-category">Web development</p>
-                <!-- </a> -->
+                </a>
               </li>
 
               <li
@@ -879,17 +895,23 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a class="project-container" href="#">
                   <figure class="project-img">
-                    <div class="project-item-icon-box">
+                    <!-- <div
+                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
+                      class="project-item-icon-box"
+                    >
                       <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <div class="project-item-icon-box2 project-item-icon-box">
+                    </div> -->
+                    <!-- <div
+                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
+                      class="project-item-icon-box2 project-item-icon-box"
+                    >
                       <ion-icon name="logo-github"></ion-icon>
-                    </div>
+                    </div> -->
 
                     <img
-                      style="object-fit: contain;"
+                      style="object-fit: contain"
                       src="./assets/images/project-5.png"
                       alt="dsm."
                       loading="lazy"
@@ -907,18 +929,23 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a class="project-container" href="#">
                   <figure class="project-img">
-                    <!-- <a href="https://advance-task-manager.vercel.app/"> -->
-                    <div class="project-item-icon-box">
+                    <div
+                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
+                      class="project-item-icon-box"
+                    >
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <div class="project-item-icon-box2 project-item-icon-box">
+                    <div
+                      onclick="window.location.href='https://github.com/atulj10/Advance-Task-Manager';"
+                      class="project-item-icon-box2 project-item-icon-box"
+                    >
                       <ion-icon name="logo-github"></ion-icon>
                     </div>
 
                     <img
-                      style="object-fit: contain;"
+                      style="object-fit: contain"
                       src="./assets/images/project-6.png"
                       alt="metaspark"
                       loading="lazy"
@@ -936,17 +963,23 @@
                 data-filter-item
                 data-category="web development"
               >
-                <a href="#">
+                <a class="project-container" href="#">
                   <figure class="project-img">
-                    <div class="project-item-icon-box">
+                    <div
+                      onclick="window.location.href='https://e-service-zeta.vercel.app/';"
+                      class="project-item-icon-box"
+                    >
                       <ion-icon name="eye-outline"></ion-icon>
                     </div>
-                    <div class="project-item-icon-box2 project-item-icon-box">
+                    <div
+                      onclick="window.location.href='https://github.com/atulj10/E-Service';"
+                      class="project-item-icon-box2 project-item-icon-box"
+                    >
                       <ion-icon name="logo-github"></ion-icon>
                     </div>
 
                     <img
-                      style="object-fit: contain;"
+                      style="object-fit: contain"
                       src="./assets/images/project-7.png"
                       alt="summary"
                       loading="lazy"
@@ -960,10 +993,10 @@
               </li>
 
               <!-- <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+              <a h class="project-container"ref="#">
 
                 <figure class="project-img">
-                  <div class="project-item-icon-box">
+                  <div onclick="window.location.href='https://advance-task-manager.vercel.app/';" class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
@@ -978,10 +1011,10 @@
             </li> -->
 
               <!-- <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a h class="project-container"ref="#">
 
                 <figure class="project-img">
-                  <div class="project-item-icon-box">
+                  <div onclick="window.location.href='https://advance-task-manager.vercel.app/';" class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
