GitHub social added

--- a/index.html
+++ b/index.html
@@ -124,15 +124,15 @@
           <div class="separator"></div>
 
           <ul class="social-list">
-            <li class="social-item">
+            <!-- <li class="social-item">
               <a href="#" class="social-link">
                 <ion-icon class="socials-icons" name="logo-facebook"></ion-icon>
               </a>
-            </li>
+            </li> -->
 
             <li class="social-item">
-              <a href="#" class="social-link">
-                <ion-icon class="socials-icons" name="logo-twitter"></ion-icon>
+              <a href="https://github.com/atulj10" class="social-link">
+                <ion-icon class="socials-icons" name="logo-github"></ion-icon>
               </a>
             </li>
 
