Portfolio changed to projects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vCard - Personal Portfolio</title>
+    <title>vCard - Personal project</title>
 
     <!--
     - favicon
@@ -171,7 +171,7 @@
             </li>
 
             <li class="navbar-item">
-              <button class="navbar-link" data-nav-link>Portfolio</button>
+              <button class="navbar-link" data-nav-link>Project</button>
             </li>
 
             <!-- <li class="navbar-item">
@@ -712,12 +712,12 @@
         </article>
 
         <!--
-        - #PORTFOLIO
+        - #project
       -->
 
-        <article class="portfolio" data-page="portfolio">
+        <article class="project" data-page="project">
           <header>
-            <h2 class="h2 article-title">Portfolio</h2>
+            <h2 class="h2 article-title">Projects</h2>
           </header>
 
           <section class="projects">
