projects content seperated

--- a/index.html
+++ b/index.html
@@ -769,265 +769,7 @@
               </ul>
             </div>
 
-            <ul class="project-list">
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a class="project-container" href="#">
-                  <figure class="project-img">
-                    <div
-                      onclick=""
-                      class="project-item-icon-box"
-                    >
-                      <ion-icon name="eye-off"></ion-icon>
-                    </div>
-                    <div
-                      onclick="window.location.href='https://github.com/atulj10/ECommerce';"
-                      class="project-item-icon-box2 project-item-icon-box"
-                    >
-                      <ion-icon name="logo-github"></ion-icon>
-                    </div>
-
-                    <img
-                      style="object-fit: contain"
-                      src="./assets/images/project-1.jpg"
-                      alt="finance"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">E-Commerce</h3>
-
-                  <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a class="project-container" href="#">
-                  <figure class="project-img">
-                    <!-- <div
-                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
-                      class="project-item-icon-box"
-                    >
-                      <p>I'm not allowed to share any info on this</p>
-                    </div> -->
-                    <!-- <div
-                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
-                      class="project-item-icon-box2 project-item-icon-box"
-                    >
-                      <ion-icon name="logo-github"></ion-icon>
-                    </div> -->
-
-                    <img
-                      style="object-fit: contain"
-                      src="./assets/images/project-2.png"
-                      alt="orizon"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">MPV(lead generator)</h3>
-
-                  <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <!-- <li class="project-item  active" data-filter-item data-category="web design">
-              <a class="project-container" href="#">
-
-                <figure class="project-img">
-                  <div onclick="window.location.href='https://advance-task-manager.vercel.app/';" class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img style='height:200px;object-fit: cover; width: 260px;' src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Fundo</h3>
-
-                <p class="project-category">Web design</p>
-
-              </a>
-            </li> -->
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a class="project-container" href="#">
-                  <figure class="project-img">
-                    <div
-                      onclick="window.location.href='https://figma-clone-nu-ten.vercel.app/';"
-                      class="project-item-icon-box"
-                    >
-                      <ion-icon color="" name="eye-outline"></ion-icon>
-                    </div>
-                    <div
-                      onclick="window.location.href='https://github.com/atulj10/figma_clone';"
-                      class="project-item-icon-box2 project-item-icon-box"
-                    >
-                      <ion-icon name="logo-github"></ion-icon>
-                    </div>
-
-                    <img
-                      style="object-fit: contain"
-                      src="./assets/images/project-4.png"
-                      alt="brawlhalla"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Figma clone</h3>
-
-                  <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a class="project-container" href="#">
-                  <figure class="project-img">
-                    <!-- <div
-                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
-                      class="project-item-icon-box"
-                    >
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div> -->
-                    <!-- <div
-                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
-                      class="project-item-icon-box2 project-item-icon-box"
-                    >
-                      <ion-icon name="logo-github"></ion-icon>
-                    </div> -->
-
-                    <img
-                      style="object-fit: contain"
-                      src="./assets/images/project-5.png"
-                      alt="dsm."
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Alumnuat(social media)</h3>
-
-                  <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a class="project-container" href="#">
-                  <figure class="project-img">
-                    <div
-                      onclick="window.location.href='https://advance-task-manager.vercel.app/';"
-                      class="project-item-icon-box"
-                    >
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <div
-                      onclick="window.location.href='https://github.com/atulj10/Advance-Task-Manager';"
-                      class="project-item-icon-box2 project-item-icon-box"
-                    >
-                      <ion-icon name="logo-github"></ion-icon>
-                    </div>
-
-                    <img
-                      style="object-fit: contain"
-                      src="./assets/images/project-6.png"
-                      alt="metaspark"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Task manager</h3>
-
-                  <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <li
-                class="project-item active"
-                data-filter-item
-                data-category="web development"
-              >
-                <a class="project-container" href="#">
-                  <figure class="project-img">
-                    <div
-                      onclick="window.location.href='https://e-service-zeta.vercel.app/';"
-                      class="project-item-icon-box"
-                    >
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </div>
-                    <div
-                      onclick="window.location.href='https://github.com/atulj10/E-Service';"
-                      class="project-item-icon-box2 project-item-icon-box"
-                    >
-                      <ion-icon name="logo-github"></ion-icon>
-                    </div>
-
-                    <img
-                      style="object-fit: contain"
-                      src="./assets/images/project-7.png"
-                      alt="summary"
-                      loading="lazy"
-                    />
-                  </figure>
-
-                  <h3 class="project-title">Landing page(firm eservices)</h3>
-
-                  <p class="project-category">Web development</p>
-                </a>
-              </li>
-
-              <!-- <li class="project-item  active" data-filter-item data-category="applications">
-              <a h class="project-container"ref="#">
-
-                <figure class="project-img">
-                  <div onclick="window.location.href='https://advance-task-manager.vercel.app/';" class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img style='height:200px;object-fit: cover; width: 260px;' src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Task Manager</h3>
-
-                <p class="project-category">Applications</p>
-
-              </a>
-            </li> -->
-
-              <!-- <li class="project-item  active" data-filter-item data-category="web development">
-              <a h class="project-container"ref="#">
-
-                <figure class="project-img">
-                  <div onclick="window.location.href='https://advance-task-manager.vercel.app/';" class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img style='height:200px;object-fit: cover; width: 260px;' src="./assets/images/project-9.png" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">Web development</p>
-
-              </a>
-            </li> -->
-            </ul>
+            <ul class="project-list" id="project-list"></ul>
           </section>
         </article>
 
