Added the issue warning box

--- a/index.html
+++ b/index.html
@@ -792,23 +792,13 @@
                 <img id="project-detail-image" src="" alt="" loading="lazy" />
               </figure>
               <div class="warning-box">
-                <strong>Note:</strong>
-                <p>
-                  Please ensure all sensitive data is handled according to
-                  compliance guidelines.</p>
-                </p>
+                
+                <p id="warning-text"></p>
               </div>
 
               <div class="project-info">
                 <ul class="tech-stack-list" id="project-tech-stack"></ul>
-                <div
-                  style="
-                    white-space: pre-wrap;
-                    word-wrap: break-word;
-                  "
-                  class="project-text"
-                  id="project-detail-description"
-                ></div>
+                <div class="project-text" id="project-detail-description"></div>
 
                 <div class="project-links">
                   <a
