--- a/index.html
+++ b/index.html
@@ -737,11 +737,14 @@
               <li class="filter-item">
                 <button data-filter-btn>Web development</button>
               </li>
+              <li class="filter-item">
+                <button data-filter-btn>Internship</button>
+              </li>
             </ul>
 
             <div class="filter-select-box">
               <button class="filter-select" data-select>
-                <div class="select-value" data-selecct-value>
+                <div class="select-value" data-select-value>
                   Select category
                 </div>
 
@@ -765,6 +768,9 @@
 
                 <li class="select-item">
                   <button data-select-item>Web development</button>
+                </li>
+                <li class="select-item">
+                  <button data-select-item>Internship</button>
                 </li>
               </ul>
             </div>
@@ -792,7 +798,6 @@
                 <img id="project-detail-image" src="" alt="" loading="lazy" />
               </figure>
               <div class="warning-box">
-                
                 <p id="warning-text"></p>
               </div>
 
