--- a/index.html
+++ b/index.html
@@ -740,6 +740,9 @@
               <li class="filter-item">
                 <button data-filter-btn>Internship</button>
               </li>
+              <li class="filter-item">
+                <button data-filter-btn>AI</button>
+              </li>
             </ul>
 
             <div class="filter-select-box">
@@ -771,6 +774,9 @@
                 </li>
                 <li class="select-item">
                   <button data-select-item>Internship</button>
+                </li>
+                <li class="select-item">
+                  <button data-select-item>AI</button>
                 </li>
               </ul>
             </div>
