Details added for other projects

--- a/index.html
+++ b/index.html
@@ -240,23 +240,6 @@
                 </div>
               </li>
 
-              <!-- <li class="service-item">
-
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
-              </div>
-
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
-
-                <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
-                </p>
-              </div>
-
-            </li> -->
-
               <li class="service-item">
                 <div class="service-icon-box">
                   <img
@@ -272,6 +255,26 @@
                   <p class="service-item-text">
                     Professional development of applications for iOS and
                     Android.
+                  </p>
+                </div>
+              </li>
+
+              <li class="service-item">
+                <div class="service-icon-box">
+                  <img
+                    src="./assets/images/icon-design.svg
+                "
+                    alt="design icon"
+                    width="40"
+                  />
+                </div>
+
+                <div class="service-content-box">
+                  <h4 class="h4 service-item-title">Web design</h4>
+
+                  <p class="service-item-text">
+                    The most modern and high-quality design made at a
+                    professional level.
                   </p>
                 </div>
               </li>
