Skills section added ( testing )

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </head>
 
   <body>
@@ -295,6 +304,108 @@
 
             </li> -->
             </ul>
+          </section>
+
+          <!-- Skill -->
+          <section class="skills-carousel-section">
+            <h3 class="h3 service-title">My Skills</h3>
+            <div class="skills-carousel-wrapper">
+              <div class="skills-carousel">
+                <!-- Group 1 -->
+                <div class="skills-group">
+                  <div class="skill-card">
+                    <ion-icon name="logo-html5"></ion-icon>
+                    <p>HTML</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-css3"></ion-icon>
+                    <p>CSS</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-javascript"></ion-icon>
+                    <p>JavaScript</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-react"></ion-icon>
+                    <p>React</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-nodejs"></ion-icon>
+                    <p>Node.js</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-github"></ion-icon>
+                    <p>GitHub</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="git-branch-outline"></ion-icon>
+                    <p>Git</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-firebase"></ion-icon>
+                    <p>Firebase</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-angular"></ion-icon>
+                    <p>Angular</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="terminal-outline"></ion-icon>
+                    <p>CLI</p>
+                  </div>
+                </div>
+
+                <!-- Group 2 -->
+                <div class="skills-group">
+                  <div class="skill-card">
+                    <ion-icon name="logo-vue"></ion-icon>
+                    <p>Vue</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-python"></ion-icon>
+                    <p>Python</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-laravel"></ion-icon>
+                    <p>Laravel</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="cloud-outline"></ion-icon>
+                    <p>Cloud</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="logo-sass"></ion-icon>
+                    <p>SASS</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="server-outline"></ion-icon>
+                    <p>Server</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="code-working-outline"></ion-icon>
+                    <p>Code</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="construct-outline"></ion-icon>
+                    <p>Tools</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="color-palette-outline"></ion-icon>
+                    <p>Design</p>
+                  </div>
+                  <div class="skill-card">
+                    <ion-icon name="shield-checkmark-outline"></ion-icon>
+                    <p>Security</p>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Indicator -->
+              <div class="skills-indicator">
+                <span class="indicator-line active"></span>
+                <span class="indicator-line"></span>
+              </div>
+            </div>
           </section>
 
           <!--
